objects/SalesAgreementProductSchedule.object
<CustomObject>
    <fields>
        <fullName>PMC_SS_AnnualTons__c</fullName>
        <description>States the Annual Tons for the Specific Schedule</description>
        <label>Annual Tons</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_BinSpaceTons__c</fullName>
        <description>States the Bin Space Tons for the Specific Schedule</description>
        <label>Bin Space Tons</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Target__c</fullName>
        <description>State the Target for a specific schedule</description>
        <label>Target</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PMC_SS_RestrictSAProductSchedules</fullName>
        <active>true</active>
        <description>To restrict the updates on planned values of Sales Agreement Product Schedule when Sales Agreement is not in Draft status</description>
        <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$User.LastName &lt;&gt; &apos;Platform Integration User&apos;,
NOT(
ISPICKVAL(SalesAgreementProduct.SalesAgreement.Status , &quot;Draft&quot;))
)</errorConditionFormula>
        <errorMessage>Sales Agreement Product Schedules cannot be added or updated at this stage. Please Amend this Sales Agreement</errorMessage>
    </validationRules>
</CustomObject>